Ensure RenderStyle and SameSizeAsRenderStyle have the same size https://bugs.webkit.org/show_bug.cgi?id=176210

Patch by Yoshiaki Jitsukawa <Yoshiaki.Jitsukawa@sony.com> on 2017-09-01
Reviewed by Daniel Bates.

SameSizeAsRenderStyle::m_nonInheritedFlags requires a 64 bit alignment,
which currently produces an extra 32 bit padding with 32 bit build.

* rendering/style/RenderStyle.cpp:
Make m_nonInheritedFlags 32 bit aligned and restore the size check.

Canonical link: https://commits.webkit.org/192880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221480 268f45cc-cd09-0410-ab3c-d52691b4dbfc